; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_i2o_block.c_i2o_block_device_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_i2o_block.c_i2o_block_device_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2o_block_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2o_block_device*)* @i2o_block_device_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2o_block_device_free(%struct.i2o_block_device* %0) #0 {
  %2 = alloca %struct.i2o_block_device*, align 8
  store %struct.i2o_block_device* %0, %struct.i2o_block_device** %2, align 8
  %3 = load %struct.i2o_block_device*, %struct.i2o_block_device** %2, align 8
  %4 = getelementptr inbounds %struct.i2o_block_device, %struct.i2o_block_device* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @blk_cleanup_queue(i32 %7)
  %9 = load %struct.i2o_block_device*, %struct.i2o_block_device** %2, align 8
  %10 = getelementptr inbounds %struct.i2o_block_device, %struct.i2o_block_device* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = call i32 @put_disk(%struct.TYPE_2__* %11)
  %13 = load %struct.i2o_block_device*, %struct.i2o_block_device** %2, align 8
  %14 = call i32 @kfree(%struct.i2o_block_device* %13)
  ret void
}

declare dso_local i32 @blk_cleanup_queue(i32) #1

declare dso_local i32 @put_disk(%struct.TYPE_2__*) #1

declare dso_local i32 @kfree(%struct.i2o_block_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
